--- a/regression_analysis.Rmd
+++ b/regression_analysis.Rmd
@@ -3,7 +3,7 @@ title: "Pooled Regression"
 date: "`r format(Sys.time(), '%d %B %Y')`"
 output: 
   html_document:
-    code_folding: hide
+    #code_folding: hide
     theme: lumen #moon #lumen
     highlight: tango #espresso
     center: false
@@ -43,13 +43,13 @@ hw <- read.csv("C:\\Users\\dghasemisemeskandeh\\Desktop\\Mehrgan_Malekpour\\hw.c
 myformula <- "lend ~ rgdpch_ini_hw + lini + lag(lki2_hw) + lag(lsenroll_hw) + lag(lgpop_hw)"
 ```
 
-### 2.4.	Running Fixed effects model within the estimator
+### 2.4. Running Fixed effects model within the estimator
 
 ```{r model}
 model_fit <-
   plm(myformula,
       data   = hw,
-      index  = c("tavawac", "period5y"), # c(group index, time index)
+      index  = c("tavawac", "period5y"),
       model  = "within",
       effect = "individual") 
 ```
@@ -60,10 +60,8 @@ model_fit <-
 broom::tidy(model_fit)
 ```
 
-### Including Plots
-
-You can also embed plots, for example:
+### Scatter plot
 
 ```{r hw, echo=FALSE}
-plot(as.numeric(model_fit$residuals), hw$lend, col = "steelblue3", pch = 16, cex = .7)
+plot(hw$lini, hw$lend, col = "steelblue3", pch = 16, cex = .7)
 ```
